--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
     git:
       url: https://github.com/FilledStacks/flutterfire.git
       path: packages/firebase_remote_config
-
+  smooth_star_rating: ^1.1.1
   built_value:
 
   
