--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.3+8
+version: 1.1.0+9
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -24,48 +24,45 @@ dependencies:
   flutter:
     sdk: flutter
   # Firebase
-  firebase_auth: ^0.18.3
-  firebase_core: ^0.5.2
-  firebase_storage: ^4.0.1
-  firebase_messaging:
-  cloud_firestore: ^0.14.3
+  firebase_auth: "^0.20.1"
+  firebase_core: "^0.7.0"
+  firebase_storage: "^7.0.0"
+  firebase_messaging: "^8.0.0-dev.15"
+  cloud_firestore: "^0.16.0+1"
+  firebase_remote_config: ^0.6.0
   flutter_local_notifications:
 
   # Google Maps
-  google_sign_in: ^4.5.6
-  flutter_polyline_points: ^0.2.1
+  google_sign_in:
+  flutter_polyline_points:
   geolocator:
 
-  timeago: ^2.0.29
-  equatable: ^1.2.5
-  flutter_bloc: ^6.1.0
-  persistent_bottom_nav_bar: ^3.1.0
-  image_picker: ^0.6.7+14
-  image_cropper: ^1.3.1
+  timeago:
+  equatable:
+  flutter_bloc:
+  persistent_bottom_nav_bar:
+  image_picker:
+  image_cropper:
   flutter_slidable:
   google_maps_flutter: 1.0.6
-  animate_icons: ^0.0.4
-  smooth_page_indicator: ^0.2.0
+  animate_icons:
+  smooth_page_indicator:
   flushbar:
-  meta: ^1.2.3
+  meta:
   formz:
-  provider: ^4.3.2+2
+  provider:
   pedantic:
   url_launcher:
-  package_info: ^0.4.3+2
-  cupertino_icons: ^1.0.0
+  package_info:
+  cupertino_icons:
   font_awesome_flutter:
   dio:
   flutter_dash:
   sliding_up_panel:
   google_map_location_picker:
-  firebase_remote_config:
-    git:
-      url: https://github.com/FilledStacks/flutterfire.git
-      path: packages/firebase_remote_config
-  smooth_star_rating: ^1.1.1
+  smooth_star_rating:
   built_value:
-  fluttercontactpicker: ^4.2.1
+  fluttercontactpicker:
   
   authentication_repository:
     path: ../../../mobile/authentication_repository
