--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -63,7 +63,7 @@ dependencies:
   smooth_star_rating:
   built_value:
   fluttercontactpicker:
-  
+
   authentication_repository:
     path: ../../../mobile/authentication_repository
   user_repository:
@@ -77,6 +77,9 @@ dev_dependencies:
   build_runner:
   source_gen:
   built_value_generator:
+
+dependency_overrides:
+  intl: 0.17.0
 
 flutter_icons:
   android: false
