--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,45 +24,47 @@ dependencies:
   flutter:
     sdk: flutter
   # Firebase
-  firebase_auth: "^0.20.1"
-  firebase_core: "^0.7.0"
-  firebase_storage: "^7.0.0"
-  firebase_messaging: "^8.0.0-dev.15"
-  cloud_firestore: "^0.16.0+1"
-  firebase_remote_config: ^0.6.0
-  flutter_local_notifications:
+  firebase_auth: ^1.1.2
+  firebase_core: ^1.1.0
+  firebase_storage: ^8.0.5
+  firebase_messaging: ^9.1.3
+  cloud_firestore: ^1.0.7
+  firebase_remote_config: ^0.10.0-dev.2
+  flutter_local_notifications: ^5.0.0+3
 
   # Google Maps
-  google_sign_in:
-  flutter_polyline_points:
-  geolocator:
+  google_sign_in: ^5.0.2
+  flutter_polyline_points: ^1.0.0
+  geolocator: ^7.0.3
 
-  timeago:
-  equatable:
-  flutter_bloc:
-  persistent_bottom_nav_bar:
-  image_picker:
-  image_cropper:
-  flutter_slidable:
-  google_maps_flutter: 1.0.6
-  animate_icons:
-  smooth_page_indicator:
-  flushbar:
-  meta:
-  formz:
-  provider:
-  pedantic:
-  url_launcher:
-  package_info:
-  cupertino_icons:
-  font_awesome_flutter:
-  dio:
-  flutter_dash:
-  sliding_up_panel:
-  google_map_location_picker:
+  timeago: ^3.0.2
+  equatable: ^2.0.0
+  flutter_bloc: ^7.0.0
+  persistent_bottom_nav_bar: ^4.0.2
+  image_picker: ^0.7.4
+  image_cropper: ^1.4.0
+  flutter_slidable: ^0.6.0
+  google_maps_flutter: ^2.0.3
+  animate_icons: ^2.0.0
+  smooth_page_indicator: ^0.3.0-nullsafety.0
+  meta: ^1.3.0
+  formz: ^0.4.0
+  provider: ^5.0.0
+  pedantic: ^1.11.0
+  url_launcher: ^6.0.3
+  package_info: ^2.0.0
+  cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^9.0.0
+  dio: ^4.0.0
+  sliding_up_panel: ^2.0.0+1
+  place_picker: ^0.9.19-nullsafety
   smooth_star_rating:
-  built_value:
-  fluttercontactpicker:
+    git:
+      url: https://github.com/bhavin-concetto/smoothratingbar.git
+      ref: dev
+  built_value: ^8.0.2
+  fluttercontactpicker: ^4.4.0
+  another_flushbar: ^1.10.20
 
   authentication_repository:
     path: ../../../mobile/authentication_repository
@@ -72,14 +74,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.8.0"
-  build:
-  build_runner:
-  source_gen:
-  built_value_generator:
+  flutter_launcher_icons: ^0.9.0
+  build_runner: ^2.0.1
+  built_value_generator: ^8.0.5
 
 dependency_overrides:
   intl: 0.17.0
+  build_config: ^1.0.0
 
 flutter_icons:
   android: false
