--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,3 +86,4 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-analytics'
 }
+apply plugin: 'com.google.firebase.crashlytics'
