--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.3+12
+version: 1.1.4+13
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^1.0.7
   firebase_remote_config: ^0.10.0-dev.2
   flutter_local_notifications: ^5.0.0+3
+  firebase_crashlytics: "^2.0.2"
 
   # Google Maps
   google_sign_in: ^5.0.2
